<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trim_and_merge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nader.mp4lighteditor.TrimAndLoopActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/trim"
    android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/frmChosenFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/txtSeekStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <SeekBar
                android:id="@+id/seekStart"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <SeekBar
                android:id="@+id/seekEnd"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:mirrorForRtl="true" />
            <TextView
                android:id="@+id/txtSeekEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/loop"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">
            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/shape_circle_white"
                android:layout_margin="2dp"
                android:text="@string/minus"/>
            <TextView
                android:id="@+id/tvLoop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_gravity="center"
                android:text="0"
                android:layout_margin="10dp" />
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/shape_circle_white"
                android:text="@string/plus"
                android:layout_margin="2dp"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnTrimAndLoop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="Trim and Loop"/>

    <TextView
        android:id="@+id/tvSavedFile"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        tools:text="@string/looped_file_path"
        android:gravity="center"
        android:layout_gravity="center"/>

    <FrameLayout
        android:id="@+id/frmFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btnPlayAudio"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/ic_play_arrow_black_24dp"/>
        <SeekBar
            android:id="@+id/seekPlayAudio"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvAudioCurrentPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
-->
</LinearLayout>
